# Inverse_Kinematics_Task

./: CMakeLists.txt  ar_ik_api.cpp  ar_ik_api.h  ar_ik_task.cpp  user.cpp
